--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Wallet</title>
+    <link rel="stylesheet" href="./index.css">
+
   </head>
   <body class="bg-gray-700">
     <noscript>You need to enable JavaScript to run this app.</noscript>
